--- a/style.css
+++ b/style.css
@@ -1,22 +1,4 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
 
-body {
-  font-family: "Concert One", cursive;
-  font-size: 16px;
-}
-
-input {
-  height: 50px;
-  width: 100%;
-  padding: 6px;
-  margin-top: 10px;
-  font-size: 2.4em;
-  border: none;
-}
 
 ul {
   list-style-type: none;
@@ -35,10 +17,6 @@ li {
   line-height: 1.5;
 }
 
-li:before {
-  content: "\200B";
-  position: absolute;
-}
 
 .startButton {
   width: 200px;
@@ -47,7 +25,7 @@ li:before {
 }
 
 
-.button1 .button2 .button3 .button4 {
+.btn {
   width: 200px;
   margin: 0 auto;
   margin-top: 40px;
